--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "unistd.h": "c",
-        "semaphore.h": "c"
+        "semaphore.h": "c",
+        "client.h": "c"
     }
 }
